tests/custom/STARIS_2022/operation-type-errors/product-type-error-02/stderr.expected
Error:
    product-type-error.essence:2:23:
  |
2 | such that i = product([false, true, false])
  |                       ^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Integer elements"
	Got: bool

cat: *.solution: No such file or directory
